finalizing version 1.0 and fixing bugs